assignment3/nginx-dep.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx-dep
# spec:
#   replicas: 5
#   selector:
#     matchLabels:
#       app: nginx
#   template:
#     metadata:
#       labels:
#         app: nginx
#         run: nginx-svc
#     spec:
#       containers:
#       - name: nginx
#         image: nginx:1.14.2
#         ports:
#         - containerPort: 80
#         volumeMounts:
#           - name: nginx-config-file
#             mountPath: /etc/nginx/nginx.conf
#             subPath: nginx.cfg
#             readOnly: true
#       volumes:
#         - name: nginx-config-file
#           configMap:
#             name: nginx-configmap
#             items:
#               - key: nginx.cfg
#                 path: nginx.cfg

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-config-file
            mountPath: /etc/nginx/conf.d
            readOnly: true
      volumes:
        - name: nginx-config-file
          configMap:
            name: nginx-configmap
            items: 
              - key: nginx.cfg
                path: nginx.cfg
