assignment3/app-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-svc
spec:
  selector:
    app: app-1
  ports:
    - port: 80
      targetPort: 80
      # targetPort: 5678
